[gd_scene load_steps=11 format=3 uid="uid://bjxtn5eijqmly"]

[ext_resource type="Script" path="res://script/gameover.gd" id="1_igyxd"]
[ext_resource type="PackedScene" uid="uid://chiljqvrxnobv" path="res://scene/back_ground.tscn" id="2_0vake"]
[ext_resource type="PackedScene" uid="uid://by160yhbb0qpo" path="res://scene/menu_button.tscn" id="2_73nri"]
[ext_resource type="AudioStream" uid="uid://c4m47u8bkwhms" path="res://sounds/defeat.mp3" id="3_73nri"]
[ext_resource type="Shader" uid="uid://1hcfyg37upp0" path="res://shader/noise.gdshader" id="3_prwty"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_88lim"]
frequency = 0.0037
fractal_lacunarity = 1.765

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_0ha60"]
width = 1920
height = 1080
seamless = true
noise = SubResource("FastNoiseLite_88lim")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0vvtt"]
resource_local_to_scene = true
shader = ExtResource("3_prwty")
shader_parameter/density = 1.0
shader_parameter/fog_offset = Vector2(0, 0)
shader_parameter/speed = 0.04
shader_parameter/noise_texture = SubResource("NoiseTexture2D_0ha60")
shader_parameter/color = Vector3(0.55, 0.45, 0.55)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0yr2k"]
bg_color = Color(0.352941, 0.360784, 0.4, 0)

[sub_resource type="Theme" id="Theme_igyxd"]
default_font_size = 90

[node name="gameover" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_igyxd")

[node name="BackGround" parent="." instance=ExtResource("2_0vake")]
material = SubResource("ShaderMaterial_0vvtt")
layout_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0yr2k")

[node name="MainMenuButton" parent="Panel" instance=ExtResource("2_73nri")]
layout_mode = 0
offset_left = 510.0
offset_top = 600.0
offset_right = 610.0
offset_bottom = 700.0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="Panel/MainMenuButton"]
layout_mode = 0
offset_left = 19.0
offset_top = 25.0
offset_right = 81.0
offset_bottom = 75.0
text = "Main
Menu"
horizontal_alignment = 1

[node name="QuitButton" parent="Panel" instance=ExtResource("2_73nri")]
layout_mode = 0
offset_left = 1210.0
offset_top = 600.0
offset_right = 1310.0
offset_bottom = 700.0
scale = Vector2(2, 2)

[node name="Label" type="Label" parent="Panel/QuitButton"]
layout_mode = 0
offset_left = 32.0
offset_top = 38.0
offset_right = 69.0
offset_bottom = 61.0
text = "Quit"

[node name="Title" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 685.0
offset_top = 200.0
offset_right = 1201.0
offset_bottom = 324.0
theme = SubResource("Theme_igyxd")
text = "GAME OVER"

[node name="DefeatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_73nri")
attenuation = 0.5

[node name="GameoverTitleTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="Panel/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="Panel/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="GameoverTitleTimer" to="." method="_on_gameover_title_timer_timeout"]
